fix dark mode

--- a/src/scss/menu/space.scss
+++ b/src/scss/menu/space.scss
@@ -37,7 +37,7 @@
 			.item.add {
 				.iconWrap {
 					background-image: url('~img/icon/plus/space.svg'); background-size: 20px; 
-					background-position: center; background-repeat: no-repeat; box-shadow: 0px 0px 0px 1px var(--color-bg-primary) inset;
+					background-position: center; background-repeat: no-repeat; box-shadow: 0px 0px 0px 1px var(--color-control-active) inset;
 				}
 			}
 
